--- a/PythonIDE_Testing/PythonIDE_Testing/pom.xml
+++ b/PythonIDE_Testing/PythonIDE_Testing/pom.xml
@@ -98,7 +98,14 @@
 			<version>1.15.3</version>
 		</dependency>
 
-<!--		<dependency>-->
+		<dependency>
+			<groupId>org.eclipse.parsson</groupId>
+			<artifactId>parsson</artifactId>
+			<version>1.1.4</version>
+		</dependency>
+
+
+		<!--		<dependency>-->
 <!--			<groupId>jakarta.servlet</groupId>-->
 <!--			<artifactId>jakarta.servlet-api</artifactId>-->
 <!--			<version>6.0.0</version>-->
