--- a/PythonIDE_Testing/PythonIDE_Testing/pom.xml
+++ b/PythonIDE_Testing/PythonIDE_Testing/pom.xml
@@ -79,6 +79,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.7.1</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>jakarta.json</artifactId>
 			<version>2.0.1</version>
